--- a/public/style.css
+++ b/public/style.css
@@ -285,8 +285,18 @@ margin: 0;
     margin: 0;
     background: linear-gradient(110deg, #000 0%, #2E2E2E 54.5%, #555 100%);
 }
-.barrauniversal{
-    background: linear-gradient(110deg, #53D9F6 50%, #FF70F1 100%);
-    
+.navbar-black {
+    background: rgb(25, 25, 25);
+}
+
+.navbar-text-white {
+    color: white !important;
+}
+.table-black {
+    background: #2E2E2E;
+    color: white;
+    justify-content: space-between;
+    border: #171717 solid;
+    border-color:#bfbfbf;
 }
 
